# phoenix-tracing-fastapi-async

./: README.md  docker-compose.yml  opentelemetry-instrumentation.py  phoenix-instrumentation.py  pyproject.toml
