[project]
name = "phoenix-trace-async"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix-otel>=0.8.0",
    "fastapi>=0.115.8",
    "langchain>=0.3.19",
    "langchain-openai>=0.3.6",
    "langgraph>=0.2.74",
    "openinference-instrumentation-langchain>=0.1.33",
    "openinference-semantic-conventions>=0.1.14",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-exporter-otlp>=1.30.0",
    "opentelemetry-instrumentation>=0.51b0",
    "opentelemetry-semantic-conventions>=0.51b0",
    "uvicorn>=0.34.0",
]
